<resources>
    <string name="app_name">Motor Insurance Premium Calculator</string>
    <string name="banner_ad_unit_id">ca-app-pub-4189677300594650/6902124326</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4189677300594650/4868306893</string>
    <string name="rs">₹</string>
    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="idv">IDV :</string>
    <string name="idv_disp">IDV </string>
    <string name="in_rupees">In Rupees</string>
    <string name="rupee_symbol">₹</string>
    <string name="date_of_purchase">Date of Purchase :</string>
    <string name="date_of_purchase_disp">Date of Purchase </string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="date">Date</string>
    <string name="zone">Zone :</string>
    <string name="zone_disp">Zone </string>
    <string name="zone_a">A</string>
    <string name="zone_b">B</string>
    <string name="cc">CC :</string>
    <string name="cc_disp">CC </string>
    <string name="nil_depreciation">Nil Depreciation :</string>
    <string name="nil_depreciation_disp">Nil Depreciation </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value">value</string>
    <string name="per_symbol">%</string>
    <string name="n_d_discount">N D Discount :</string>
    <string name="n_d_discount_disp">N/D Discount </string>
    <string name="in_percentage">In Percentage</string>
    <string name="u_w_discount">U/W Discount :</string>
    <string name="u_w_discount_disp">U/W Discount </string>
    <string name="n_c_b">N C B :</string>
    <string name="n_c_b_disp">N C B </string>
    <string name="pa_to_owner_driver">PA to Owner - Driver:</string>
    <string name="pa_to_owner_driver_disp">PA to Owner - Driver</string>
    <string name="paod_val_s">320</string>
    <string name="red_warn_line">(*Enter Input in terms of numbers and 0 if N/A)</string>
    <string name="calculate">Calculate</string>
    <string name="_151_350_cc">151 - 350 cc</string>
    <string name="_76_150_cc">76 - 150 cc</string>
    <string name="_350_cc"><![CDATA[> 350 cc]]></string>
    <string name="zone_c">C</string>
    <string name="cng">CNG :</string>
    <string name="cng_disp">CNG </string>
    <string name="cng_type">CNG Type :</string>
    <string name="cng_type_disp">CNG Type </string>
    <string name="inbuilt_cng">Inbuilt</string>
    <string name="fixed_cng">Fixed</string>
    <string name="seating_capacity">Seating Capacity :</string>
    <string name="seating_capacity_disp">Seating Capacity </string>
    <string name="seating_cap_auto">3</string>
    <string name="plus_symbol">+</string>
    <string name="seating_cap_auto_2">1</string>
    <string name="i_d_v_tractor">I D V (Tractor) :</string>
    <string name="i_d_v_tractor_disp">I D V (Tractor) </string>
    <string name="i_d_v_trailer">I D V (Trailer) :</string>
    <string name="i_d_v_trailer_disp">I D V (Trailer) </string>
    <string name="val_zero">0</string>
    <string name="coolie">Coolie</string>
    <string name="val_one">1</string>
    <string name="type">Type :</string>
    <string name="type_disp">Type </string>
    <string name="above_60_passengers">Above 60 Passengers</string>
    <string name="capacity">Capacity</string>
    <string name="driver_conductor">Driver + Conductor :</string>
    <string name="driver_conductor_disp">Driver + Conductor </string>
    <string name="driver">Driver</string>
    <string name="conductor">Conductor</string>
    <string name="upto_18_passengers">Upto 18 Passengers</string>
    <string name="upto_36_passengers">Upto 36 Passengers</string>
    <string name="upto_60_passengers">Upto 60 Passengers</string>
    <string name="gvw">GVW :</string>
    <string name="gvw_disp">GVW </string>
    <string name="upto_1000_kgs">Upto 1000 kgs</string>
    <string name="public_goods_auto">Public Goods Auto</string>
    <string name="public_nd_val">15</string>
    <string name="nfpp">NFPP</string>
    <string name="private_goods_auto">Private Goods Auto</string>
    <string name="above_1500_cc">above 1500 cc</string>
    <string name="lpg">LPG :</string>
    <string name="lpg_disp">LPG </string>
    <string name="lpg_type">LPG Type :</string>
    <string name="lpg_type_disp">LPG Type </string>
    <string name="anti_theft">Anti-Theft :</string>
    <string name="anti_theft_disp">Anti-Theft </string>
    <string name="_20001_40000_kgs">20001 - 40000 kgs</string>
    <string name="colon_symb">:</string>
    <string name="kgs">Kgs</string>
    <string name="imt_23">IMT 23</string>
    <string name="n_d">N / D</string>
    <string name="a_od_total"><![CDATA[(A) -> OD Total]]></string>
    <string name="tp_basic">TP Basic</string>
    <string name="tp_basic_god_priv_val">7144</string>
    <string name="l_l_to_driver">L L to Driver</string>
    <string name="ll_val_7500_private">50</string>
    <string name="b_total"><![CDATA[(B) -> Total]]></string>
    <string name="a_plus_b">(A) + (B)</string>
    <string name="service_tax">G S T</string>
    <string name="service_tax18">Tax 18%</string>
    <string name="service_tax12">Tax 12%</string>
    <string name="tax_val">18</string>
    <string name="total_premium">Total Premium</string>
    <string name="commercial_goods_vehicle_private_package_policy">Commercial Goods Vehicle Private - Package Policy</string>
    <string name="pa_to_occupants">PA to Occupants :</string>
    <string name="pa_to_occupants_disp">PA to Occupants </string>
    <string name="val_1_lacs">1 Lacs</string>
    <string name="val_2_lacs">2 Lacs</string>
    <string name="upto_1000_cc">Upto 1000 cc</string>
    <string name="upto_1500_cc">Upto 1500 cc</string>
    <string name="_1001_1500_cc">1001 - 1500 cc</string>
    <string name="_12001_20000_kgs">12001 - 20000 kgs</string>
    <string name="gvw_val_7500">7500</string>
    <string name="gvw_val_12000">12000</string>
    <string name="above_40000_kgs">Above 40000 kgs</string>
    <string name="act_liability_tractor">Act / Liability (Tractor) :</string>
    <string name="act_liability_tractor1">Act / Liability (Tractor)</string>
    <string name="act_liability_tractor_disp">Act / Liability (Tractor) </string>
    <string name="trac_liab_val">7267</string>
    <string name="act_liability_trailer">Act / Liability (Trailer) :</string>
    <string name="act_liability_trailer1">Act / Liability (Trailer)</string>
    <string name="act_liability_trailer_disp">Act / Liability (Trailer) </string>
    <string name="ll_d_val">50</string>
    <string name="act_liability">Act / Liability :</string>
    <string name="act_liability_disp">Act / Liability </string>
    <string name="c_n_g_kit">C N G Kit :</string>
    <string name="c_n_g_kit_disp">C N G Kit </string>
    <string name="val_three">3</string>
    <string name="lpg_kit">LPG Kit :</string>
    <string name="lpg_kit_disp">LPG Kit </string>
    <string name="tractors_and_trailers_package_policy">Tractors and Trailers Package Policy</string>
    <string name="tp_basic_tractor">TP Basic (Tractor)</string>
    <string name="tp_basic_trailer">TP Basic (Trailer)</string>
    <string name="tractors_and_trailers_liability_policy">Tractors and Trailers Liability Policy</string>
    <string name="p_a_to_passengers">P A to Passengers</string>
    <string name="n_d_disp">N / D</string>
    <string name="private_car_npackage_policy">Private Car Package Policy</string>
    <string name="passenger_vehicle_nliability_policy">Passenger Vehicle Liability Policy</string>
    <string name="passenger_risk">Passenger Risk</string>
    <string name="l_l_to_conductor">L L to Conductor</string>
    <string name="private_car_nliabilitypolicy">Private Car LiabilityPolicy</string>
    <string name="commercial_goods_vehicle_nprivate_liability_policy">Commercial Goods Vehicle\nPrivate - Liability Policy</string>
    <string name="commercial_goods_vehicle_npublic_liability_policy">Commercial Goods Vehicle Public - Liability Policy</string>
    <string name="goods_auto_private_nliability_policy">Goods Auto Private Liability Policy</string>
    <string name="goods_auto_public_nliability_policy">Goods Auto Public Liability Policy</string>
    <string name="passenger_auto_nliability_policy">Passenger Auto Liability Policy</string>
    <string name="taxi_nliability_policy">Taxi Liability Policy</string>
    <string name="passenger_vehicle_npackage_policy">Passenger Vehicle Package Policy</string>
    <string name="o_d_basic">O D Basic</string>
    <string name="taxi_npackage_policy">Taxi Package Policy</string>
    <string name="passenger_auto_npackage_policy">Passenger Auto Package Policy</string>
    <string name="motorcycle_npackage_policy">Motorcycle Package Policy</string>
    <string name="goods_auto_public_npackage_policy">Goods Auto Public Package Policy</string>
    <string name="goods_auto_private_npackage_policy">Goods Auto Private Package Policy</string>
    <string name="commercial_goods_vehicle_npublic_package_policy">Commercial Goods Vehicle Public - Package Policy</string>
    <string name="select_policy_type">Select Policy Type</string>
    <string name="package_policy">Package Policy</string>
    <string name="liability_policy">Liability Policy</string>
    <string name="select_vehicle_weight">Select Vehicle Weight</string>
    <string name="select_vehicle_cc">Select Vehicle CC</string>
    <string name="upto_75_cc">Upto 75 CC</string>
    <string name="upto_150_cc">Upto 150 CC</string>
    <string name="upto_350_cc">Upto 350 CC</string>
    <string name="above_350_cc">Above 350 CC</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="upto_6_passengers">Upto 6 Passengers</string>
    <string name="_7_18_passengers">7 - 18 Passengers</string>
    <string name="_19_36_passengers">19 - 36 Passengers</string>
    <string name="_37_60_passengers">37 - 60 Passengers</string>
    <string name="upto_7500_kgs">Upto 7500 Kgs</string>
    <string name="_7501_12000_kgs">7501 - 12000 kgs</string>

    <!--Longterm vehicle-->
    <string name="longterm_select_vehicle">Select Vehicle Type</string>
    <string name="longterm_motorcycle">Two Wheelers</string>
    <string name="longterm_car">Private Cars</string>
    <string name="longterm_bundle">Bundle policy</string>
    <string name="longterm_package">Package Policy</string>
    <string name="longterm_paod">1420</string>
    <string name="longterm_paod_val_s">1420</string>
    <string name="longterm_paod_car_val_s">900</string>
    <string name="longterm_ll_d_val">150</string>
</resources>