<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15sp"
    android:background="#EAFAF1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_liability"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lp_bus_upto18_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:text="13176"
            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seating_capacity"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lp_bus_scpassengers_upto18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/capacity"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_weight="1"
            android:nextFocusDown="@+id/lp_bus_driver_upto18"/>
        <requestFocus />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_conductor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lp_bus_driver_upto18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal"
            android:hint="@string/driver"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_weight="1"
            android:nextFocusDown="@+id/lp_bus_conductor_upto18"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_symbol"
            android:layout_marginLeft="2dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lp_bus_conductor_upto18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:inputType="numberDecimal"
            android:hint="@string/conductor"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_weight="1"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_tax"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lp_bus_upto18_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:text="@string/tax_val"
            android:textAlignment="center"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_symbol"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pa_to_owner_driver"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/lp_bus_upto18_paod_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation='horizontal'>

                    <RadioButton
                        android:id="@+id/lp_bus_upto18_paod_value_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:checked="true"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/lp_bus_upto18_paod_value_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <EditText
                    android:id="@+id/lp_bus_upto18_paod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:focusable="true"
                    android:inputType="numberDecimal"
                    android:text="@string/paod_val_s"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupee_symbol"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:paddingTop="10dp"
                android:text="@string/red_warn_line"
                android:textColor="#ff0000"
                android:textSize="14sp"/>

    <Button
        android:id="@+id/lp_bus_upto18btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/calculate"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#3498DB"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#3CB371"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
